[package]
name = "zeromin-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zeromin"
crate-type = ["staticlib","lib"] # Change to cdylib for MacOS and Linux Builds, Change to staticlib for Windows Build

[build-dependencies]
cbindgen = "0.26.0"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.i686-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies]
libc = "0.2"
tokio = { version = "1.36.0", features = ["libc", "time", "fs", "bytes", "sync", "rt", "rt-multi-thread", "windows-sys", "full"] }
zip = "0.6.6"
