[package]
name = "zeromin-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
tokio = { version = "1", features = ["full"] }
zeromin-common = { path = "../zeromin-common" }
imgui = "*"