[package]
name = "zeromin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zeromin"
crate-type = ["staticlib"] # Change to cdylib for MacOS and Linux Builds, Change to staticlib for Windows Build

[build-dependencies]
cbindgen = "0.26.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.i686-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[dev-dependencies]
libc = "0.2"

[dependencies]
aes = "0.8.4"
ring = "0.17.8"
tokio = { version = "1.36.0", features = ["libc", "time", "fs", "bytes", "sync", "rt", "rt-multi-thread", "windows-sys", "full"] }
winapi = { version = "0.3.9", features = ["winuser", "d3d9", "dsound"] }
zip = "0.6.6"
